--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,39 +1,8 @@
-.content-pin {
-  display: flex;
-  transform: translate3d(0, 0, 0);
-  font-size: inherit;
-  color: #000;
-
-  .list-pin {
-    display: block;
-    flex: 1;
-    margin: 16px;
-    width: 70px;
-    &.secret-mode input {
-      text-security: disc;
-      -webkit-text-security: disc;
-      -moz-text-security: disc;
-    }
-  }
-
-  input {
-    width: 100%;
-    height: 60px;
-    text-align: center;
-    font-size: inherit;
-    font-weight: 500;
-    border: 1px solid #dddddd;
-    border-bottom: 1px solid #dddddd;
-    border-radius: 4px;
-    -webkit-appearance: none;
-    transform: translate3d(0, 0, 0);
-    -webkit-transform: translate3d(0, 0, 0);
-    outline: none;
-
-    &:focus {
-      box-shadow: 0px 1px 5px rgba(221, 221, 221, 1);
-    }
+.content {
+  .child {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 20px;
   }
 }
-
-
